# TheGame

./: .dockerignore  .gitignore  AGENT.md  BigPicturePlan.md  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_CODEBASE_ANALYSIS.md  Cargo.toml  Dockerfile  LinusRunThisToSetItUp.sh  README.md  TASK.md  docker-compose.linux.yml  docker-compose.yml  secrets.env.example  test.md
.agent/: Problems.md  ai_memory.V.1.yaml  cleanup_plan.md  conversation_behavior_plan.md  player_interaction_plan.md  tasks.yaml  ui_panel_plan.md
.agent/docs/: arch.md
.claude/: settings.local.json
Old documents/: POINTERS_TO_CODEX.md  REBUTTAL_TO_CODEX.md
config/: economy.toml  motivation.toml  time.toml
docs/: dialogue_research.md  economy_blueprint.md  economy_planner_spike.md  module_responsibility_map.md  plan_overview.md  tech_notes.md
src/: main.rs
src/core/: README.md  mod.rs  plugin.rs
src/dialogue/: README.md  broker.rs  errors.rs  events.rs  mod.rs  plugin.rs  queue.rs  status.rs  systems.rs  telemetry.rs  types.rs
src/dialogue/broker/: config.rs  mod.rs  openai.rs
src/economy/: README.md  components.rs  data.rs  dependency.rs  events.rs  mod.rs  planning.rs  plugin.rs  resources.rs  systems.rs  tasks.rs
src/economy/systems/: day_prep.rs  dialogue.rs  mod.rs  spawning.rs  task_execution.rs
src/npc/: README.md  components.rs  events.rs  mod.rs  plugin.rs  systems.rs
src/npc/motivation/: config.rs  mod.rs  state.rs  (+1 more)
src/player/: components.rs  mod.rs  plugin.rs  systems.rs
src/ui/: mod.rs
src/world/: README.md  components.rs  mod.rs  plugin.rs  systems.rs  time.rs
(+9 files in other folders)
